--- a/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
@@ -18,7 +18,6 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                       <!-- <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de usuario</b></h3>-->
                     </div>
                 </div>
                 <br>
@@ -54,7 +53,7 @@
                                         </div>
                                         {% if app.user.email != usuario.email %}
                                             <div class="col-md-6">
-                                                <a href="{{path("bc_del_usuario",{"id":usuario.id_usuario})}}">
+                                                <a onclick="confirmarBorradoUsuario({{usuario.id_usuario}})">
                                                     <img src="{{asset("imgdata/user-del.png")}}" height="50" width="50">
                                                     <input type="button" value="Eliminar usuario" class="btn btn-danger"> 
                                                 </a>
@@ -113,17 +112,17 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
-            $("#controlBusqueda").toggle();
+                                                    $(document).ready(function () {
+                                                        $("#controlBusqueda").toggle();
 
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
-            });
+                                                        $("#act_busq").click(function () {
+                                                            $("#controlBusqueda").toggle();
+                                                        });
 
-            $("#MenuUser").toggle();
-            $("#titleUser").click(function () {
-                $("#MenuUser").toggle();
-            });
-        });
+                                                        $("#MenuUser").toggle();
+                                                        $("#titleUser").click(function () {
+                                                            $("#MenuUser").toggle();
+                                                        });
+                                                    });
     </script>
 {% endblock %}
